# compare-crates-io-git

./: Cargo.toml  README.md  run-tests.sh
src/: cargo_toml.rs  crates_io.rs  diff_directories.rs  git.rs  main.rs
