[package]
name = "compare-crates-io-git"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tempfile = "3.10.1"
toml = "0.8.12"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
url = "2.5.0"
git2 = "0.18.3"
reqwest = {  version = "0.12.3", features = ["blocking"] }
tar = "0.4.40"
flate2 = "1.0.28"
chrono = { version = "0.4.37", features = ["now"] }
walkdir = "2.5.0"
md5 = "0.7.0"
